# Ambientor-Real-Time-Engine

./: .gitignore  LICENSE  README.md
asm/: asm_dsp.h
asm/arm/: neon_mix.S  neon_sine.S
asm/x86/: avx_mix.S  sse_sine.S
cpp/: CMakeLists.txt
cpp/apps/: ambientor_host.cpp
cpp/cmake/: FindAmbientor.cmake
cpp/plugins/: ambientor_example.cpp
python/: README.md  pyproject.toml
python/ambientor_py/: __init__.py  _version.py
python/src/: lib.rs
rust/: Cargo.toml
rust/ambientor-cli/: Cargo.toml
rust/ambientor-cli/src/: main.rs
rust/ambientor-core/: Cargo.toml  build.rs
rust/ambientor-core/src/: dsp.rs  envelopes.rs  filters.rs  lib.rs
rust/ambientor-engine/: Cargo.toml
rust/ambientor-engine/src/: graph.rs  lib.rs  nodes.rs  reverb.rs  scenes.rs
rust/ambientor-ffi/: Cargo.toml  build.rs
rust/ambientor-ffi/include/: ambientor.h
rust/ambientor-ffi/src/: lib.rs
scripts/: build_all.sh  dev_setup.sh  fmt_all.sh
