[package]
name = "ambientor-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rizkysaputradev/Ambientor-Real-Time-Engine"
description = "Evolving ambient synthesis engine: nodes, graph, scenes, and realtime glue."

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
# Re-export tuning toggles to the core DSP crate:
default = ["realtime"]
realtime = ["dep:cpal"]             # enable audio I/O via CPAL
fast-math = ["ambientor-core/fast-math"]
simd = ["ambientor-core/simd"]
no-std-core = ["ambientor-core/no-std"]   # engine itself still uses std

[dependencies]
ambientor-core = { path = "../ambientor-core" }
# Pulled from workspace pins:
cpal = { workspace = true, optional = true }
rand = { workspace = true }
cfg-if = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
# Add test/bench deps here later if needed

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
